@@ -23,6 +23,7 @@ Music View preferences.
 
 
 import re
+import sys
 
 from PyQt5.QtCore import QSettings, Qt
 from PyQt5.QtGui import QFont
@@ -185,7 +186,11 @@ class Printing(preferences.Group):
 
     def loadSettings(self):
         s = QSettings()
-        self.useCups.setChecked(s.value("printing/directcups", True, bool))
+        # see comment in pagedview and warning messages in musicview/__init__
+        # and viewers/__init__ for the rationale for the default value
+        self.useCups.setChecked(s.value("printing/directcups",
+                False if sys.platform.startswith('darwin') else True,
+                bool))
         with qutil.signalsBlocked(self.resolution):
             self.resolution.setEditText(format(s.value("printing/dpi", 300, int)))
 
